--- a/twitter_clone/authorization/static/authorization/css/styles.css
+++ b/twitter_clone/authorization/static/authorization/css/styles.css
@@ -1,7 +1,3 @@
-body {
-    font-family: Arial, Helvetica, sans-serif;
-}
-
 .main-text {
     font-size: 66px;
     font-weight: 900;
@@ -12,20 +8,39 @@ body {
     font-weight: bold;
 }
 
-.register-btn {
+.to-register-btn {
     background-color: rgb(29,161,242);
     border-color: rgb(29,161,242);
 }
 
-.login-btn {
+.to-login-btn {
     color: rgb(29,161,242);
 }
 
-.login-btn:hover {
+.to-login-btn:hover {
     color: rgb(29,161,242);
     background-color: rgb(231, 242, 243);
 }
 
 .nav-link.link:hover {
     text-decoration: underline;
+}
+
+.register-container,
+.login-container {
+    background-color: rgba(0, 0, 0, 0.4);
+    height: 100vh;
+}
+
+.register-form {
+    background-color: white;
+    border-radius: 15px;
+}
+
+.back-to-index {
+    color: black;
+}
+
+.back-to-index:hover {
+    color: black;
 }
