--- a/twitter_clone/templates/base.html
+++ b/twitter_clone/templates/base.html
@@ -15,16 +15,18 @@
     <title>{{ title }} / Твиттер</title>
 </head>
 <body>
-    {% block left_sidebar %}
-    {% endblock %}
+    {% block container %}
+        {% block left_sidebar %}
+        {% endblock %}
 
-    {% block content %}
-    {% endblock %}
+        {% block content %}
+        {% endblock %}
 
-    {% block right_sidebar %}
-    {% endblock %}
+        {% block right_sidebar %}
+        {% endblock %}
 
-    {% block footer %}
+        {% block footer %}
+        {% endblock %}
     {% endblock %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
