--- a/twitter_clone/static/css/base_styles.css
+++ b/twitter_clone/static/css/base_styles.css
@@ -9,3 +9,9 @@ body {
 .help-text {
     font-size: 12px;
 }
+
+.toast {
+    background-color: rgb(29, 155, 240);
+    color: white;
+    width: auto;
+}
