--- a/twitter_clone/authorization/templates/authorization/form_snippet.html
+++ b/twitter_clone/authorization/templates/authorization/form_snippet.html
@@ -1,6 +1,8 @@
+{% load widget_tweaks %}
+
 {% for field in form %}
     <div class="form-floating mb-3">
-        {{ field }}
+        {% render_field field class="form-control mb-2" placeholder=field.label %}
         {{ field.label_tag }}
         {% if field.help_text %}
             <p class="help-text text-muted mb-2">{{ field.help_text|safe }}</p>
