--- a/twitter_clone/main_app/templates/main_app/_left_sidebar_nav.html
+++ b/twitter_clone/main_app/templates/main_app/_left_sidebar_nav.html
@@ -111,10 +111,10 @@
         </ul>
         {% if user.is_authenticated %}
             <div class="d-flex make-tweet mb-auto">
-                <a href="#" class="d-none d-lg-block flex-fill btn make-tweet-btn btn-primary btn-lg rounded-pill fw-bold fs-6" data-bs-toggle="modal" data-bs-target="#MakeTweetModal">
+                <a href="#" class="d-none d-lg-block flex-fill btn make-tweet-btn btn-primary btn-lg rounded-pill fw-bold fs-6" role="button" data-bs-toggle="modal" data-bs-target="#MakeTweetModal">
                     Твитнуть
                 </a>
-                <a href="#" class="d-block d-lg-none flex-fill btn make-tweet-btn btn-primary btn-lg circle" data-bs-toggle="modal" data-bs-target="#MakeTweetModal">
+                <a href="#" class="d-block d-lg-none flex-fill btn make-tweet-btn btn-primary btn-lg circle" data-bs-toggle="modal" role="button" data-bs-target="#MakeTweetModal">
                     <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="" viewBox="0 0 24 24">
                         <path d="M8.8 7.2H5.6V3.9c0-.4-.3-.8-.8-.8s-.7.4-.7.8v3.3H.8c-.4 0-.8.3-.8.8s.3.8.8.8h3.3v3.3c0 .4.3.8.8.8s.8-.3.8-.8V8.7H9c.4 0 .8-.3.8-.8s-.5-.7-1-.7zm15-4.9v-.1h-.1c-.1 0-9.2 1.2-14.4 11.7-3.8 7.6-3.6 9.9-3.3 9.9.3.1 3.4-6.5 6.7-9.2 5.2-1.1 6.6-3.6 6.6-3.6s-1.5.2-2.1.2c-.8 0-1.4-.2-1.7-.3 1.3-1.2 2.4-1.5 3.5-1.7.9-.2 1.8-.4 3-1.2 2.2-1.6 1.9-5.5 1.8-5.7z"/>
                     </svg>
@@ -137,7 +137,7 @@
                 </a>
                 <ul class="dropdown-menu text-small shadow">
                     <li>
-                        <a class="dropdown-item" href="{% url 'authorization:logout' %}">Выйти из учетной записи {{ request.user.username|at }}</a>
+                        <a class="dropdown-item" href="{% url 'authorization:logout' %}">Выйти из учетной записи {{ user.username|at }}</a>
                     </li>
                 </ul>
             </div>
