profile pages and navbar

--- a/twitter_clone/tweets/static/tweets/css/tweets_styles.css
+++ b/twitter_clone/tweets/static/tweets/css/tweets_styles.css
@@ -54,7 +54,8 @@ textarea {
 .reply-tweet,
 .retweet-tweet,
 .like-tweet,
-.tweet-others {
+.tweet-others,
+.user-avatar img {
     z-index: 20;
 }
 
