--- a/twitter_clone/main_app/static/main_app/css/base_main_app_styles.css
+++ b/twitter_clone/main_app/static/main_app/css/base_main_app_styles.css
@@ -1,10 +1,10 @@
 .nav-item:hover,
 #dropdownUser:hover {
-    background: rgb(221, 228, 228);
+    background: rgba(15, 20, 25, 0.1);
 }
 
 .nav-item-logo:hover {
-    background: rgb(220, 232, 233);
+    background: rgba(29, 155, 240, 0.1);
 }
 
 .make-tweet-btn {
