--- a/twitter_clone/main_app/templates/main_app/base_main_app.html
+++ b/twitter_clone/main_app/templates/main_app/base_main_app.html
@@ -22,6 +22,9 @@
 
                     {% block main_content %}
                     {% endblock %}
+
+                    {% include 'tweets/tweet_modal_snippet.html' with tweet='' %}
+                    
                     <div class="toast-container position-fixed bottom-0 start-50 translate-middle-x p-3" style="z-index: 100">
                         <div class="toast" id="toastNotification" data-bs-delay="5000" role="alert" aria-live="assertive" aria-atomic="true">
                             <div class="toast-body">
