--- a/twitter_clone/tweets/templates/tweets/detail_tweet_snippet.html
+++ b/twitter_clone/tweets/templates/tweets/detail_tweet_snippet.html
@@ -5,11 +5,13 @@
     <!-- Блок с инфой о юзере(аватар, юзернейм, имя профиля) -->
     <div class="d-flex flex-row user-info align-items-center mb-3" id="user-info{{ detail_tweet.id }}">
         <div class="user-avatar" id="user-avatar{{ detail_tweet.id }}">
-            <img src="https://github.com/mdo.png" alt="" width="50" height="50" class="rounded-circle me-3">
+            <a href="{% url 'user_profile:profile_tweets' detail_tweet.user.username %}">
+                <img src="https://github.com/mdo.png" alt="" width="50" height="50" class="rounded-circle me-3">
+            </a>
         </div>
         <div class="d-flex flex-column detail-tweet-usernames" id="detail-tweet-usernames{{ detail_tweet.id }}">
-            <a href="#" class="profile-name link-dark fw-bold">{{ detail_tweet.user.profile_name }}</a>
-            <a href="#" class="username text-muted text-decoration-none">{{ detail_tweet.user.username|at }}</a>
+            <a href="{% url 'user_profile:profile_tweets' detail_tweet.user.username %}" class="profile-name link-dark fw-bold">{{ detail_tweet.user.profile_name }}</a>
+            <a href="{% url 'user_profile:profile_tweets' detail_tweet.user.username %}" class="username text-muted text-decoration-none">{{ detail_tweet.user.username|at }}</a>
         </div>
     </div>
 
