--- a/twitter_clone/tweets/templates/tweets/tweet_form_snippet.html
+++ b/twitter_clone/tweets/templates/tweets/tweet_form_snippet.html
@@ -2,7 +2,7 @@
 
 <div class="tweet-form d-flex flex-row px-3 pt-3 pb-2" id="tweet-form{{ id }}">
     <div class="user-avatar" id="user-avatar">
-        <a href="#">
+        <a href="{% url 'user_profile:profile_tweets' request.user.username %}">
             <img src="https://github.com/mdo.png" alt="" width="50" height="50" class="rounded-circle me-3">
         </a>
     </div>
