--- a/twitter_clone/tweets/templates/tweets/tweet_modal_snippet.html
+++ b/twitter_clone/tweets/templates/tweets/tweet_modal_snippet.html
@@ -11,13 +11,15 @@
                 {% else %}
                     <div class="modal-tweet d-flex flex-row px-3 pt-3 pb-2" id="tweet{{ tweet.id }}">
                         <div class="modal-user-avatar" id="modal-user-avatar{{ tweet.id }}">
-                            <img src="https://github.com/mdo.png" alt="" width="50" height="50" class="rounded-circle me-3">
+                            <a href="{% url 'user_profile:profile_tweets' tweet.user.username %}">
+                                <img src="https://github.com/mdo.png" alt="" width="50" height="50" class="rounded-circle me-3">
+                            </a>
                         </div>
                         <div class="modal-tweet-body flex-fill" id="modal-tweet-body{{ tweet.id }}">
                             <div class="modal-tweet-body-top d-flex flex-row" id="modal-tweet-body-top{{ tweet.id }}">
                                 <div class="tweet-usernames" id="tweet-usernames{{ tweet.id }}">
-                                    <a href="#" class="profile-name link-dark fw-bold">{{ tweet.user.profile_name }}</a>
-                                    <a href="#" class="username text-muted text-decoration-none">{{ tweet.user.username|at }}</a>
+                                    <a href="{% url 'user_profile:profile_tweets' tweet.user.username %}" class="profile-name link-dark fw-bold">{{ tweet.user.profile_name }}</a>
+                                    <a href="{% url 'user_profile:profile_tweets' tweet.user.username %}" class="username text-muted text-decoration-none">{{ tweet.user.username|at }}</a>
                                 </div>
                                 <div class="dividing-point px-1">
                                     <span>·</span>
