--- a/twitter_clone/main_app/templates/main_app/base_main_app.html
+++ b/twitter_clone/main_app/templates/main_app/base_main_app.html
@@ -4,19 +4,19 @@
 {% block extra_static %}
     <link type="text/css" href="{% static 'main_app/css/base_main_app_styles.css' %}" rel="stylesheet">
     <link type="text/css" href="{% static 'tweets/css/tweets_styles.css' %}" rel="stylesheet">
-    <script type="text/javascript" src="{% static 'tweets/js/tweets_js.js' %}" defer></script>
+    <script type="module" src="{% static 'tweets/js/tweets_js.js' %}" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/clipboard@2.0.10/dist/clipboard.min.js"></script>
 {% endblock %}
 
 {% block container %}
-    <div class="app-container container">
-        <div class="row row-cols-3">
+    <div class="app-container container-xl">
+        <div class="row row-cols-2 row-cols-lg-3">
             {% block left_sidebar %}
                 {% include 'main_app/_left_sidebar_nav.html' %}
             {% endblock %}
 
             {% block content %}
-                <div class="col-10 col-lg-6 border-end g-0">
+                <div class="content-container content-width col-9 col-lg-6 border-end g-0">
                     {% block upper_content %}
                     {% endblock %}
 
@@ -37,6 +37,9 @@
             {% endblock %}
 
             {% block right_sidebar %}
+                <div class="d-none d-lg-block col-lg-3">
+                    райт сайд бар
+                </div>
             {% endblock %}
 
             {% block footer %}
