--- a/twitter_clone/tweets/static/tweets/css/tweets_styles.css
+++ b/twitter_clone/tweets/static/tweets/css/tweets_styles.css
@@ -30,6 +30,16 @@ textarea {
 
 /* SHORT TWEET BODY AS LINK */
 
+.user-avatar {
+    margin-right: 18px;
+}
+
+.retweet-info-text span {
+    font-size: 13px;
+    color: rgb(83, 100, 113);
+    font-weight: 700;
+}
+
 .tweet {
     position: relative;
 }
@@ -54,8 +64,7 @@ textarea {
 .reply-tweet,
 .retweet-tweet,
 .like-tweet,
-.tweet-others,
-.user-avatar img {
+.tweet-others {
     z-index: 20;
 }
 
