--- a/twitter_clone/user_profile/templates/user_profile/profile_tweets.html
+++ b/twitter_clone/user_profile/templates/user_profile/profile_tweets.html
@@ -6,7 +6,11 @@
     <div class="tweets-container">
         {% for tweet in root_tweets %}
             <div class="profile-tweet" id="profile-tweet{{ tweet.id }}">
-                {% render_short_tweet tweet %}
+                {% if tweet.user.username != profile_owner.username %}
+                    {% render_short_tweet tweet is_retweet=True %}
+                {% else %}
+                    {% render_short_tweet tweet %}
+                {% endif %}
                 {% include 'tweets/tweet_modal_snippet.html' with tweet=tweet %}
             </div>
         {% endfor %}
