--- a/twitter_clone/user_profile/templates/user_profile/_profile_header_snippet.html
+++ b/twitter_clone/user_profile/templates/user_profile/_profile_header_snippet.html
@@ -3,7 +3,7 @@
 <div class="profile-header px-3 pt-2 mb-3">
     <div class="d-flex flex-row align-items-center">
         <div class="user-photo me-auto">
-            <a href="#"><img src="{{ profile_owner.get_profile_photo }}"></a>
+            <a href="#"><img src="{{ profile_owner.profile_photo.url }}"></a>
         </div>
         <div class="user-actions">
             <!-- Если текущий авторизованный пользователь находится на своей странице,
