--- a/twitter_clone/tweets/templates/tweets/detail_tweet_snippet.html
+++ b/twitter_clone/tweets/templates/tweets/detail_tweet_snippet.html
@@ -5,9 +5,11 @@
     <!-- Блок с инфой о юзере(аватар, юзернейм, имя профиля) -->
     <div class="d-flex flex-row user-info align-items-center mb-3" id="user-info{{ detail_tweet.id }}">
         <div class="user-avatar" id="user-avatar{{ detail_tweet.id }}">
-            <a href="{{ detail_tweet.user.get_absolute_url }}">
-                <img src="{{ detail_tweet.user.get_profile_photo }}" alt="" width="50" height="50" class="rounded-circle">
-            </a>
+            <div class="thumbnail-photo">
+                <a href="{{ detail_tweet.user.get_absolute_url }}" class="tweet-photo">
+                    <img src="{{ detail_tweet.user.profile_photo.url }}" alt="" width="50" height="50" class="rounded-circle">
+                </a>
+            </div>
         </div>
         <div class="d-flex flex-column detail-tweet-usernames" id="detail-tweet-usernames{{ detail_tweet.id }}">
             <a href="{{ detail_tweet.user.get_absolute_url }}" class="profile-name link-dark fw-bold">{{ detail_tweet.user.profile_name }}</a>
