--- a/twitter_clone/user_profile/templates/user_profile/_update_form_modal_snippet.html
+++ b/twitter_clone/user_profile/templates/user_profile/_update_form_modal_snippet.html
@@ -4,7 +4,7 @@
     <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
         <div class="modal-content">
             <div class="modal-body">
-                <form action="{% url 'user_profile:update_profile' %}" method="post" id="UpdateForm" novalidate>
+                <form action="{% url 'user_profile:update_profile' %}" method="post" id="UpdateForm" enctype="multipart/form-data" novalidate>
                     {% csrf_token %}
                     <div class="form-header d-flex flex-row align-items-center mb-4">
                         <button type="button" class="btn-close me-4" data-bs-dismiss="modal"></button>
@@ -14,7 +14,7 @@
                     <div class="input-group mb-3">
                         {% render_field profile_form.profile_photo class="image-input" %}
                         <div class="user-photo">
-                            <img src="{{ current_user.get_profile_photo }}" class="photo-preview">
+                            <img src="{{ current_user.profile_photo.url }}" class="photo-preview">
                             <label for="{{ profile_form.profile_photo.id_for_label }}">
                                 <svg viewBox="0 0 24 24" aria-hidden="true" width="24" height="24" fill="currentColor">
                                     <path d="M19.708 22H4.292C3.028 22 2 20.972 2 19.708V7.375C2 6.11 3.028 5.083 4.292 5.083h2.146C7.633 3.17 9.722 2 12 2c2.277 0 4.367 1.17 5.562 3.083h2.146C20.972 5.083 22 6.11 22 7.375v12.333C22 20.972 20.972 22 19.708 22zM4.292 6.583c-.437 0-.792.355-.792.792v12.333c0 .437.355.792.792.792h15.416c.437 0 .792-.355.792-.792V7.375c0-.437-.355-.792-.792-.792h-2.45c-.317.05-.632-.095-.782-.382-.88-1.665-2.594-2.7-4.476-2.7-1.883 0-3.598 1.035-4.476 2.702-.16.302-.502.46-.833.38H4.293z"></path>
