--- a/twitter_clone/tweets/templates/tweets/detail_tweet_snippet.html
+++ b/twitter_clone/tweets/templates/tweets/detail_tweet_snippet.html
@@ -44,11 +44,15 @@
     <!-- Блок с действиями над твитом(ответить, ретвитнуть, поставить лайк) -->
     <div class="detail-tweet-actions d-flex flex-row justify-content-around border-bottom py-1" id="detail-tweet-actions{{ detail_tweet.id }}">
         <div class="reply-tweet py-2" id="reply-tweet{{ detail_tweet.id }}">
-            <a href="" class="reply-btn" id="reply-btn{{ detail_tweet.id }}" role="button" data-bs-toggle="modal" data-bs-target="#MakeTweetModal{{ detail_tweet.id }}">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="" viewBox="0 0 24 24">
-                    <path d="M14.046 2.242l-4.148-.01h-.002c-4.374 0-7.8 3.427-7.8 7.802 0 4.098 3.186 7.206 7.465 7.37v3.828c0 .108.044.286.12.403.142.225.384.347.632.347.138 0 .277-.038.402-.118.264-.168 6.473-4.14 8.088-5.506 1.902-1.61 3.04-3.97 3.043-6.312v-.017c-.006-4.367-3.43-7.787-7.8-7.788zm3.787 12.972c-1.134.96-4.862 3.405-6.772 4.643V16.67c0-.414-.335-.75-.75-.75h-.396c-3.66 0-6.318-2.476-6.318-5.886 0-3.534 2.768-6.302 6.3-6.302l4.147.01h.002c3.532 0 6.3 2.766 6.302 6.296-.003 1.91-.942 3.844-2.514 5.176z"/>
-                </svg>
-            </a>
+            {% if request.user.is_authenticated %}
+                <a href="" class="reply-btn" id="reply-btn{{ detail_tweet.id }}" role="button" data-bs-toggle="modal" data-bs-target="#MakeTweetModal{{ detail_tweet.id }}">
+            {% else %}
+                <a href="{% url 'authorization:login' %}" class="reply-btn" id="reply-btn{{ detail_tweet.id }}" role="button">
+            {% endif %}
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="" viewBox="0 0 24 24">
+                        <path d="M14.046 2.242l-4.148-.01h-.002c-4.374 0-7.8 3.427-7.8 7.802 0 4.098 3.186 7.206 7.465 7.37v3.828c0 .108.044.286.12.403.142.225.384.347.632.347.138 0 .277-.038.402-.118.264-.168 6.473-4.14 8.088-5.506 1.902-1.61 3.04-3.97 3.043-6.312v-.017c-.006-4.367-3.43-7.787-7.8-7.788zm3.787 12.972c-1.134.96-4.862 3.405-6.772 4.643V16.67c0-.414-.335-.75-.75-.75h-.396c-3.66 0-6.318-2.476-6.318-5.886 0-3.534 2.768-6.302 6.3-6.302l4.147.01h.002c3.532 0 6.3 2.766 6.302 6.296-.003 1.91-.942 3.844-2.514 5.176z"/>
+                    </svg>
+                </a>
         </div>
         <div class="retweet-tweet py-2" id="retweet-tweet{{ detail_tweet.id }}">
             <a href="" class="retweet-btn" id="retweet-btn{{ detail_tweet.id }}" role="button">
