--- a/twitter_clone/tweets/templates/tweets/short_tweet_snippet.html
+++ b/twitter_clone/tweets/templates/tweets/short_tweet_snippet.html
@@ -57,11 +57,15 @@
         <!-- Блок с действиями над твитом(ответить, ретвитнуть, поставить лайк) -->
         <div class="tweet-actions d-flex flex-row justify-content-between pb-1" id="tweet-actions{{ tweet.id }}">
             <div class="d-flex flex-row reply-tweet align-items-baseline" id="reply-tweet{{ tweet.id }}">
-                <a href="" class="reply-btn" id="reply-btn{{ tweet.id }}" role="button" data-bs-toggle="modal" data-bs-target="#MakeTweetModal{{ tweet.id }}">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="" viewBox="0 0 24 24">
-                        <path d="M14.046 2.242l-4.148-.01h-.002c-4.374 0-7.8 3.427-7.8 7.802 0 4.098 3.186 7.206 7.465 7.37v3.828c0 .108.044.286.12.403.142.225.384.347.632.347.138 0 .277-.038.402-.118.264-.168 6.473-4.14 8.088-5.506 1.902-1.61 3.04-3.97 3.043-6.312v-.017c-.006-4.367-3.43-7.787-7.8-7.788zm3.787 12.972c-1.134.96-4.862 3.405-6.772 4.643V16.67c0-.414-.335-.75-.75-.75h-.396c-3.66 0-6.318-2.476-6.318-5.886 0-3.534 2.768-6.302 6.3-6.302l4.147.01h.002c3.532 0 6.3 2.766 6.302 6.296-.003 1.91-.942 3.844-2.514 5.176z"/>
-                    </svg>
-                </a>
+                {% if request.user.is_authenticated %}
+                    <a href="" class="reply-btn" id="reply-btn{{ tweet.id }}" role="button" data-bs-toggle="modal" data-bs-target="#MakeTweetModal{{ tweet.id }}">
+                {% else %}
+                    <a href="{% url 'authorization:login' %}" class="reply-btn" id="reply-btn{{ tweet.id }}" role="button">
+                {% endif %}
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="" viewBox="0 0 24 24">
+                            <path d="M14.046 2.242l-4.148-.01h-.002c-4.374 0-7.8 3.427-7.8 7.802 0 4.098 3.186 7.206 7.465 7.37v3.828c0 .108.044.286.12.403.142.225.384.347.632.347.138 0 .277-.038.402-.118.264-.168 6.473-4.14 8.088-5.506 1.902-1.61 3.04-3.97 3.043-6.312v-.017c-.006-4.367-3.43-7.787-7.8-7.788zm3.787 12.972c-1.134.96-4.862 3.405-6.772 4.643V16.67c0-.414-.335-.75-.75-.75h-.396c-3.66 0-6.318-2.476-6.318-5.886 0-3.534 2.768-6.302 6.3-6.302l4.147.01h.002c3.532 0 6.3 2.766 6.302 6.296-.003 1.91-.942 3.844-2.514 5.176z"/>
+                        </svg>
+                    </a>
                 <span class="replies-count text-center not-active" id="replies-count{{ tweet.id }}" style="width: 40px;">{{ tweet.children.count|is_zero }}</span>
             </div>
             <div class="d-flex flex-row retweet-tweet align-items-baseline" id="retweet-tweet{{ tweet.id }}">
