--- a/twitter_clone/user_profile/templates/user_profile/profile_likes.html
+++ b/twitter_clone/user_profile/templates/user_profile/profile_likes.html
@@ -5,7 +5,7 @@
 {% block main_content %}
     <div class="tweets-container">
         {% for tweet in likes %}
-            <div class="profile-likes" id="profile-likes{{ tweet.id }}">
+            <div class="profile-likes" id="profile-likes{{ tweet.pk }}">
                 {% render_short_tweet tweet %}
                 {% include 'tweets/tweet_modal_snippet.html' with tweet=tweet %}
             </div>
