--- a/twitter_clone/tweets/static/tweets/css/tweets_styles.css
+++ b/twitter_clone/tweets/static/tweets/css/tweets_styles.css
@@ -34,6 +34,16 @@ textarea {
     margin-right: 18px;
 }
 
+.username-link {
+    color: rgb(29, 155, 240);
+    text-decoration: none;
+}
+
+.username-link:hover {
+    color: rgb(29, 155, 240);
+    text-decoration: underline;
+}
+
 .retweet-info-text span {
     font-size: 13px;
     color: rgb(83, 100, 113);
@@ -55,7 +65,8 @@ textarea {
 
 .tweet-link:hover:not(.detail-tweet .tweet-link),
 .tweet-actions:hover + .tweet-link,
-.tweet-body-top:hover ~ .tweet-link {
+.tweet-body-top:hover ~ .tweet-link,
+.tweet-content:hover ~ .tweet-link {
     background-color: rgba(0, 0, 0, 0.03);
     transition-duration: 0.2s;
 }
@@ -64,8 +75,10 @@ textarea {
 .reply-tweet,
 .retweet-tweet,
 .like-tweet,
-.tweet-others {
+.tweet-others,
+.username-link {
     z-index: 20;
+    position: relative;
 }
 
 .profile-name {
