--- a/twitter_clone/static/css/base_styles.css
+++ b/twitter_clone/static/css/base_styles.css
@@ -1,6 +1,10 @@
+/* GENERAL TEXT STYLES */
+
 body {
     font-family: Arial, Helvetica, sans-serif;
 }
+
+/* GENERAL FORMS STYLES */
 
 .field-error {
     color: red;
@@ -10,12 +14,30 @@ body {
     font-size: 12px;
 }
 
+/* TOAST STYLES */
+
 .toast {
     background-color: rgb(29, 155, 240);
     color: white;
     width: auto;
 }
 
+/* TWEETS THUMBNAIL */
+
 .thumbnail-photo img {
     object-fit: cover;
+}
+
+/* EMPTY PAGE MESSAGES */
+
+.head-message span {
+    color: rgb(15, 20, 25);
+    font-size: 31px;
+    font-weight: 800;
+}
+
+.bottom-message span {
+    color: rgb(83, 100, 113);
+    font-size: 15px;
+    font-weight: 400;
 }
