--- a/twitter_clone/main_app/templates/main_app/base_main_app.html
+++ b/twitter_clone/main_app/templates/main_app/base_main_app.html
@@ -24,16 +24,8 @@
                     {% endblock %}
 
                     {% include 'tweets/tweet_modal_snippet.html' with tweet='' %}
-                    
-                    <div class="toast-container position-fixed bottom-0 start-50 translate-middle-x p-3" style="z-index: 100">
-                        <div class="toast" id="toastNotification" data-bs-delay="5000" role="alert" aria-live="assertive" aria-atomic="true">
-                            <div class="toast-body">
-                                <div class="toast-text fs-6">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                 </div>
+                {{ block.super }}
             {% endblock %}
 
             {% block right_sidebar %}
